# flexric_scale

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Cu-36_Du-68_Du63.conf  Cu-63_Du-68.conf  DEMO_Scale.md  Makefile  README.md  cmake_install.cmake  flexric.conf  flexricGrafana.conf  flexricLocal.conf  flexricLocal_130-61.conf  flexricLocal_130-61_split.conf  flexricLocal_130-81_2nd.conf  flexricRemote.conf  flexricRemote_36.conf  flexricRemote_63.conf  flexricRemote_63_36.conf  flexricRemote_63_68.conf  kpmFlexricRemote.conf  loop_hiper_demo.sh  srsFlexricRemote.conf  xapp_mon_e2sm_kpm.conf
RAN_FUNCTION/: Makefile  cmake_install.cmake
RAN_FUNCTION/CUSTOMIZED/: Makefile  cmake_install.cmake
RAN_FUNCTION/O-RAN/: Makefile  cmake_install.cmake
ci-scripts/: Dockerfile.ctest  Jenkinsfile  doGitLabMerge.sh  generateHtmlReport.py
demo-scale/: Advantages.md  dummy_ric_ips.sh  scaleRIC_200.conf  scaleRIC_200bis.conf  scaleRIC_201.conf  scaleRIC_202.conf  scaleRIC_203.conf
docker/: Dockerfile.flexric.rhel  Dockerfile.flexric.rocky  Dockerfile.flexric.ubuntu  Dockerfile.flexric.ubuntu20  Dockerfile.flexric.ubuntu22
examples/emulator/agent/: CMakeLists.txt  read_setup_ran.c  sm_kpm.c  sm_rc.c  test_agent.c
examples/ric/: near_ric.c
examples/xApp/: CMakeLists.txt
examples/xApp/c/kpm_rc/: xapp_kpm_rc.c
examples/xApp/c/monitor/: CMakeLists.txt  xapp_kpm_moni.c  xapp_rc_moni.c
examples/xApp/ics/: CMakeLists.txt  db_metrics.c  db_metrics.h  hiper_ran_tcp_client.c  hiper_ran_tcp_client.h  hiper_ran_xapp.c  ics_xapp.c  ics_xapp_gtp_mac_rlc_pdcp_moni.c  ics_xapp_gtp_mac_rlc_pdcp_moni_extend.c  ics_xapp_kpm_moni.c  latency_xapp.c  oaibox_xapp_ue_measurements_ics.c  scale_ics_xapp.c
examples/xApp/oaibox/: CMakeLists.txt  oaibox_xapp_slice_management.c  oaibox_xapp_ue_measurements.c  oaibox_xapp_ue_measurements_v0.c
flexric/src/agent/: Makefile  cmake_install.cmake
flexric/src/lib/: Makefile  cmake_install.cmake
flexric/src/lib/3gpp/: Makefile  cmake_install.cmake
flexric/src/lib/ap/: Makefile  cmake_install.cmake
flexric/src/lib/e2ap/: Makefile  cmake_install.cmake
flexric/src/lib/ep/: Makefile  cmake_install.cmake
flexric/src/lib/msg_hand/: Makefile  cmake_install.cmake
flexric/src/lib/sm/: Makefile  cmake_install.cmake
flexric/src/sm/: Makefile  cmake_install.cmake
flexric/src/sm/gtp_sm/: Makefile  cmake_install.cmake
flexric/src/sm/kpm_sm/: Makefile  cmake_install.cmake
flexric/src/sm/kpm_sm_v03.00/: Makefile  cmake_install.cmake
flexric/src/sm/mac_sm/: Makefile  cmake_install.cmake
flexric/src/sm/pdcp_sm/: Makefile  cmake_install.cmake
flexric/src/sm/rc_sm/: Makefile  cmake_install.cmake
flexric/src/sm/rlc_sm/: Makefile  cmake_install.cmake
flexric/src/sm/slice_sm/: Makefile  cmake_install.cmake
flexric/src/sm/tc_sm/: Makefile  (+1 more)
flexric/src/util/: Makefile  cmake_install.cmake
k8s-flex/: Chart.yaml  values.yaml
k8s-flex/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s-scaleRIC-dynamicIp/templates/: _helpers.tpl  serviceaccount.yaml
k8s-scaleRIC-dynamicIp/templates/tests/: test-connection.yaml
k8s-scaleRIC-staticIp/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
openshift/: build-config.yaml
src/agent/: CMakeLists.txt  e2_agent.c  e2_agent.h  e2_agent_api.c  e2_agent_api.h  msg_handler_agent.c  msg_handler_agent.h  plugin_agent.h
src/lib/3gpp/: CMakeLists.txt
src/lib/3gpp/dec/: CMakeLists.txt  dec_asn.h  dec_en_gnb.h  dec_enb.c  dec_enb.h  dec_global_enb_id.c  dec_global_enb_id.h  dec_global_gnb_id.c  dec_global_gnb_id.h  dec_global_ng_enb.c  dec_global_ng_enb.h  dec_global_ng_ran.h  dec_gnb.c  dec_gnb.h  dec_gnb_cu_up.h  dec_gnb_du.h  dec_ng_enb.h  dec_ng_enb_du.h
src/lib/3gpp/enc/: CMakeLists.txt  enc_asn.h  enc_en_gnb.c  enc_en_gnb.h  enc_enb.c  enc_enb.h  enc_global_enb_id.c  enc_global_enb_id.h  enc_global_gnb_id.c  enc_global_gnb_id.h  enc_global_ng_enb.c  enc_global_ng_enb.h  enc_global_ng_ran.h  enc_gnb.c  enc_gnb.h  enc_gnb_cu_up.h  enc_gnb_du.c  enc_gnb_du.h  enc_ng_enb.c  enc_ng_enb.h  enc_ng_enb_du.h
src/lib/3gpp/ie/: CMakeLists.txt
src/lib/e2ap/: README.md  add_suffix_asn1c.py
src/lib/ep/: e2ap_ep.c
src/lib/sm/: CMakeLists.txt
src/lib/sm/dec/: CMakeLists.txt
src/lib/sm/enc/: CMakeLists.txt
src/lib/sm/ie/: CMakeLists.txt
src/ric/: asio_ric.c  near_ric.c  near_ric.h
src/ric/iApp/: CMakeLists.txt  e42_iapp.c  e42_iapp.h  map_ric_id.c  map_ric_id.h  msg_handler_iapp.c  msg_handler_iapp.h  subscription_registry.c  subscription_registry.h
src/ric/iApps/: string_parser.c
src/sm/: sm_agent.h
src/sm/gtp_sm/: CMakeLists.txt  gtp_sm_agent.c  gtp_sm_agent.h  gtp_sm_id.h  gtp_sm_ric.c
src/sm/mac_sm/: CMakeLists.txt  mac_sm_agent.c  mac_sm_ric.c
src/sm/pdcp_sm/: CMakeLists.txt  pdcp_sm_agent.c  pdcp_sm_ric.c
src/sm/rc_sm/: CMakeLists.txt  README.md  rc_sm_agent.c  rc_sm_id.h
src/sm/rlc_sm/: CMakeLists.txt  rlc_sm_agent.c  rlc_sm_ric.c
src/sm/slice_sm/: CMakeLists.txt  slice_sm_agent.c
src/sm/tc_sm/: CMakeLists.txt  tc_sm_agent.c  tc_sm_ric.c
src/util/: CMakeLists.txt  byte_array.c  byte_array.h  conf_file.c  conf_file.h  ngran_types.h
src/xApp/: CMakeLists.txt  asio_xapp.c  e2ap_xapp.c  e42_xapp.c  e42_xapp_api.c  sync_ui.c
src/xApp/db/: db.c
src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h
test/agent-ric/: test_near_ric.c
test/agent-ric-xapp/: test_ag_ric_xapp.c
test/rnd/: fill_rnd_data_rc.c  fill_rnd_data_rc.h
test/sm/gtp_sm/: main.c
test/sm/mac_sm/: main.c
test/sm/pdcp_sm/: main.c
test/sm/rc_sm/: main.c
test/sm/rlc_sm/: main.c
test/sm/slice_sm/: main.c
test/sm/tc_sm/: main.c
xapp_analytics/: README.md  compareKpi.py  compare_metrics.py  global_kpi_correlation.py  kpi_correlation.py  shrink_database.py  tensorFlowKpi.py  throughput_plot.py
xapp_analytics/correlation_results/: correlation_analysis_20241125-151940_static.txt  correlation_analysis_20241125-165338_mob.txt  correlation_analysis_20241125-171420_sat_0_mob.txt  correlation_analysis_20241127-112628.txt
(+2964 files in other folders)
